fixed time step interpolation